updated nceas + meds slide including linking to workshop materials

--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@ Slides &amp; source code available on [<svg aria-label="GitHub" role="img" viewB
 ]
 ]
 
-&lt;br&gt;
-&lt;br&gt;
-
 .pull-right[
+&lt;br&gt;
+&lt;br&gt;
 &lt;span style = 'font-size: 85%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#5D7E6A;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> Master of Ecology, Evolution &amp; Marine Biology, UC Santa Barbara 2020&lt;/span&gt;  
 &lt;br&gt;
 &lt;span style = 'font-size: 85%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#5D7E6A;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> Data Training Coordinator @ the [National Center for Ecological Analysis and Synthesis](https://www.nceas.ucsb.edu/) (NCEAS)&lt;/span&gt;  
@@ -159,10 +158,15 @@ Slides &amp; source code available on [<svg aria-label="GitHub" role="img" viewB
 ]
 ]
 
-&lt;span style = 'font-size: 85%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#5D7E6A;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> 11-month professional master's program administered by Bren in partnership with NCEAS&lt;/span&gt;  
+&lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#5D7E6A;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> 11-month professional master's program, administered by [Bren](https://bren.ucsb.edu/masters-programs/master-environmental-data-science) in partnership with NCEAS&lt;/span&gt;  
 &lt;br&gt;
-&lt;span style = 'font-size: 85%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#5D7E6A;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> &lt;/span&gt;  
+&lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#5D7E6A;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> Coursework includes scientific programming, ML, remote sensing, spatial analysis, data viz, and more &lt;/span&gt;  
 &lt;br&gt;
+&lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#5D7E6A;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> 6-month group capstone project - come watch the Class of 2022 present on May 26! Info [here](https://bren.ucsb.edu/events/2022-meds-capstone-project-presentations)&lt;/span&gt;  
+&lt;br&gt;
+&lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#5D7E6A;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> Find workshops materials on the [MEDS website for current students](https://ucsb-meds.github.io/workshops.html)&lt;/span&gt;  
+&lt;br&gt;
+
 
 ---
 ### Quarto - what even is it??
@@ -170,6 +174,8 @@ Slides &amp; source code available on [<svg aria-label="GitHub" role="img" viewB
 &lt;span style = 'font-size: 80%;'&gt;Quarto is a publishing tool built on Pandoc (just like RMarkdown), however it's&lt;/span&gt;
 
 &lt;iframe src="https://quarto.org/" width="100%" height="400px" data-external="1"&gt;&lt;/iframe&gt;
+
+If you prefer
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
