added link to danc_quarto_key.qmd

--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@ class: inverse, middle, center
 
 ### Let's move over to RStudio to demonstrate some of the fun new features available when working with Quarto documents. 
 
-You can follow along by opening up RStudio on your own computer, or check out the following slides, which detail some of what I'll demonstrate. You can also reference the [quarto_key.qmd]() file, which includes examples of all the features we'll cover today. 
+You can follow along by opening up RStudio on your own computer, or check out the following slides, which detail some of what I'll demonstrate. 
 
-ADD LINK TO KEY
+You can also reference the [danc_quarto_key.qmd](https://github.com/samanthacsik/DANC-quarto/blob/main/danc_quarto_key.qmd) file, which includes examples of all the features we'll cover today. 
 
 ---
 ### `.Rmd` and `.qmd` files still look very similar
