added footnote with quarto documentation link

--- a/index.html
+++ b/index.html
@@ -289,6 +289,10 @@ ggplot(...) +
 
 &lt;span style = 'font-size: 70%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#5D7E6A;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> use kebab-case for all YAML keys and to delimit figure/layout/code chunk options (e.g. `fig-alt` rather than `fig.alt`)&lt;/span&gt;  
 
+.footnote[
+For more on execution options, check out the [quarto documentation](https://quarto.org/docs/computations/execution-options.html).
+]
+
 ---
 class: inverse, center, middle
 
